apps/site/web/static/css/_trip_plan.scss
.no-trips {
  font-size: $font-size-h4;
  font-weight: 700;
}

.instructions {
  color: $gray-light;

  &:empty {
    display: none;
  }
}

.plan-date-container {
  display: none;
}

.trip-plan-form-container {
  @include media-breakpoint-up(md) {
    position: sticky;
    top: 0;
  }

  @include media-breakpoint-down(sm) {
    margin: $space-12 $base-spacing;
  }
}

.date-time-select {
  select {
    background-color: $white;
    border: $border;
    border-radius: $space-4;
    display: inline;
  }
}

.trip-plan-itinerary-container {
  border: $border;
  border-radius: $border-radius;
  margin-top: $space-12;

  > * {
    padding: $base-spacing;
  }
}

.trip-plan-itinerary-header {
  background: $gray-bordered-background;
  border-bottom: $border;
  color: $gray-dark;
  display: block;
  font-weight: bold;

  &:hover {
    text-decoration: none;
  }
}

.trip-plan-itinerary-leg-feature {
  svg {
    margin-top: $space-4;
  }

  &:first-child {
    padding-left: $base-spacing-sm;
  }
}

.trip-plan-itinerary-duration {
  float: right;
  font-weight: normal;
}

.trip-plan-current-location {
  background-color: $btn-primary-bg;
  border-radius: $space-6;
  color: $btn-primary-color;
  display: inline-block;
  margin: 0 12.5%;
  text-align: center;
  width: 75%;
}

.trip-plan-map {
  height: $base-spacing * 31.5;
  margin-bottom: $base-spacing;

  @include media-breakpoint-down(sm) {
    height: $base-spacing * 20;
  }
}

.trip-plan-initial-map {
  height: $base-spacing * 18;
  margin-bottom: $base-spacing;
  width: 100%;

  @include media-breakpoint-down(sm) {
    height: $base-spacing * 20;
  }
}

.trip-plan-related-links {
  display: flex;
  flex-flow: wrap;
  margin: $base-spacing 0;
  padding: 0;

  > * {
    display: inline-block;
    flex: 1;
    margin: $space-8 0;
    min-width: 15 * $base-spacing;
  }

  strong {
    flex: 2 0 100%;
  }
}

.trip-planner-form {
  @include media-breakpoint-up(sm) {
    &.collapse {
      display: block;
    }
  }
}

.trip-planner-edit-btn {
  margin-top: $space-8;
  width: 100%;
}

.planner-location-box-location {
  padding-bottom: $space-8;
}

.itinerary-transfer-row {
  width: 100%;
}

.itinerary-instruction {
  display: inline-block;
  max-width: 75%;
  padding-right: $space-8;
}

.itinerary-step {
  border-bottom: $border;
  flex: 1 1 0%;
  margin-bottom: $space-6;
  padding-bottom: $space-6;
  width: 100%;
}

.itinerary-stop {
  width: 100%;
}

.trip-plan-additional-routes {
  background-color: $brand-primary-lightest;
  margin: $space-8 0;
  padding: $space-12;
}

.trip-plan-additional-routes-list {
  margin-bottom: 0;
}

